Change platform list

--- a/.github/workflows/build-opensearch.yml
+++ b/.github/workflows/build-opensearch.yml
@@ -19,4 +19,4 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build (and Push) the Docker Image
-        run: docker buildx build --push -t "ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest" Dockerfile
+        run: docker buildx build --push -t "ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest" ./
